fix: some layout issues 2

--- a/src/app.css
+++ b/src/app.css
@@ -4,9 +4,9 @@
 :root {
 	--icons-colors: #4f4f4f;
 }
-html,
+/* html,
 body,
 .app-container {
 	width: 100%;
 	height: 100%;
-}
+} */
